tests/types/errors/assign_handle_foreign_type.mog

const counter = @import("examples:counter")

const source handle<examples:counter:CounterHandle> = counter.create(1i64)
const bad handle<examples:math:CounterHandle> = source
